runtime/gen/basis-ffi.h

MLTON_CODEGEN_STATIC_INLINE Simd128_Word16_t Simd128_Word16_load(Array(Word16_t));
MLTON_CODEGEN_STATIC_INLINE void Simd128_Word16_store(Array(Word16_t),Simd128_Word16_t);
MLTON_CODEGEN_STATIC_INLINE Simd128_Word32_t Simd128_Word32_load(Array(Word32_t));
MLTON_CODEGEN_STATIC_INLINE void Simd128_Word32_store(Array(Word32_t),Simd128_Word32_t);
MLTON_CODEGEN_STATIC_INLINE Simd128_Word64_t Simd128_Word64_load(Array(Word64_t));
MLTON_CODEGEN_STATIC_INLINE void Simd128_Word64_store(Array(Word64_t),Simd128_Word64_t);
MLTON_CODEGEN_STATIC_INLINE Simd128_Word8_t Simd128_Word8_load(Array(Word8_t));
MLTON_CODEGEN_STATIC_INLINE void Simd128_Word8_store(Array(Word8_t),Simd128_Word8_t);